# talentgraph.ai

./: .gitignore  ESCO Skills Taxonomy Dataset.json  README.md  main.py  supabase_migration_v3.sql
.claude/: settings.local.json
Dashboard Theme Design (2)/: README.md  globe_visualization.js  index.html  package.json
Dashboard Theme Design (2)/organization_dashboard/: hiring_form.js  organization_dashboard.js
Dashboard Theme Design (2)/resources/: latex_resume_template.tex  preferred_platforms.json
Dashboard Theme Design (2)/user_profile_creation/: profile_card.js  profile_form.js
Dashboard Theme Design (2)/user_resume_generation/: ats_resume_formatter.js  resume_generation.js
Design Files/: Datapilot AI.html  intro.jsx  package.json  site.jsx
backend/: .env  .env.example  main.py  pyproject.toml  supabase_migration.sql  supabase_migration_v2.sql  supabase_migration_v4.sql
backend/app/: auth.py  config.py
backend/app/models/: connection.py  job.py  org.py  talent.py
backend/app/routers/: countries.py  hiring.py  jobs.py  opportunities.py  profile.py  skills.py  talent.py
backend/app/services/: claude.py  data_loader.py  matching.py  talent_extractor.py
backend/data/: esco_seed.json  ilo_signals.json  seed_talent.json
backend/data/countries/: bgd.json  uga.json
backend/scripts/: process_ilo_data.py  seed_talent.py
frontend/: generate_seed.cjs  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/components/: AuthModal.tsx  (+4 more)
resources/: latex_resume.txt  prefered_platform_per_profession.txt
(+29 files in other folders)
